--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,10 @@
-hi
+<!DOCTYPE html>
+<html>
+<head>
+  <title></title>
+</head>
+<body>
+<h1>hi</h1>
+<script src="bundle.js"></script>
+</body>
+</html>
